--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bulma/css/bulma.css"
+              "node_modules/bulma/css/bulma.min.css"
             ],
             "scripts": []
           },
@@ -94,7 +94,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bulma/css/bulma.css"
+              "node_modules/bulma/css/bulma.min.css"
             ],
             "scripts": []
           }
